--- a/audio-call.html
+++ b/audio-call.html
@@ -2,244 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Audio Call – wöndèlånd</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Audio Call - wöndèlånd</title>
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', sans-serif; }
-    body { background:#000; color:white; height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; }
-    .call-info {
-      text-align:center;
-      margin-bottom:40px;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    .peer-name { font-size:24px; font-weight:bold; margin-bottom:10px; }
-    .timer { font-family:monospace; background:rgba(255,255,255,0.1); padding:8px 16px; border-radius:20px; margin-top:10px; }
-    .status { font-size:14px; color:#ffcc00; margin-top:8px; }
-    .controls {
-      display:flex;
-      gap:30px;
+    body {
+      background: #f9f9f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 20px;
     }
-    .call-btn {
-      width:70px;
-      height:70px;
-      border-radius:50%;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:28px;
-      cursor:pointer;
+    .container {
+      text-align: center;
+      max-width: 500px;
+      background: white;
+      padding: 40px 30px;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
     }
-    .end-call { background:#d32f2f; }
-    .mute-audio { background:#333; }
+    .icon {
+      font-size: 64px;
+      margin-bottom: 20px;
+      color: #e74c3c;
+    }
+    h1 {
+      font-size: 24px;
+      color: #333;
+      margin-bottom: 16px;
+      line-height: 1.4;
+    }
+    p {
+      font-size: 16px;
+      color: #666;
+      margin-bottom: 24px;
+      line-height: 1.5;
+    }
+    .footer {
+      font-size: 14px;
+      color: #999;
+    }
   </style>
 </head>
 <body>
-  <div class="call-info">
-    <div class="peer-name" id="peerName">Calling...</div>
-    <div class="status" id="callStatus">Ringing...</div>
-    <div class="timer" id="callTimer">00:00</div>
+  <div class="container">
+    <div class="icon">🤕</div>
+    <h1>Hey <span id="username">username</span>, ops 🤕🤕</h1>
+    <p>Sorry, we have not yet implemented this feature.<br>It will be available as soon as we can.</p>
+    <p class="footer">Emmy boy programmers are seriously working on it.</p>
   </div>
 
-  <div class="controls">
-    <div class="call-btn mute-audio" id="micBtn" title="Mute">
-      <i class="fas fa-microphone"></i>
-    </div>
-    <div class="call-btn end-call" id="endCallBtn" title="End Call">
-      <i class="fas fa-phone"></i>
-    </div>
-  </div>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { 
-      getFirestore, 
-      doc, 
-      setDoc, 
-      deleteDoc,
-      serverTimestamp,
-      collection,
-      addDoc
-    } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyBbR8R_3_Xf6QQPaZf9WDRLovSycAI1bKQ",
-      authDomain: "emmy-programmers.firebaseapp.com",
-      projectId: "emmy-programmers",
-      storageBucket: "emmy-programmers.firebasestorage.app",
-      messagingSenderId: "351752440867",
-      appId: "1:351752440867:web:1f65d8c922d3d48e063596"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-
-    // Load Agora SDK
-    const script = document.createElement('script');
-    script.src = "https://download.agora.io/sdk/release/AgoraRTC_N-4.19.0.js";
-    document.head.appendChild(script);
-
-    const AGORA_APP_ID = "fcfbeea054a84e529a1d984becbb4774";
-    const params = new URLSearchParams(window.location.search);
-    const PEER_EMAIL = params.get('peer');
-    const PEER_NAME = decodeURIComponent(params.get('name') || 'User');
-    const CHANNEL = [auth.currentUser?.email?.toLowerCase(), PEER_EMAIL].filter(Boolean).sort().join('-');
-
-    let currentUser = null;
-    let client = null;
-    let localAudioTrack = null;
-    let callStartTime = null;
-    let timerInterval = null;
-    let isCallActive = false;
-
-    document.getElementById('peerName').textContent = `Calling ${PEER_NAME}`;
-    document.getElementById('callStatus').textContent = 'Ringing...';
-
-    // === Timer ===
-    function formatTime(seconds) {
-      const mins = Math.floor(seconds / 60).toString().padStart(2, '0');
-      const secs = (seconds % 60).toString().padStart(2, '0');
-      return `${mins}:${secs}`;
-    }
-
-    function startTimer() {
-      callStartTime = Date.now();
-      timerInterval = setInterval(() => {
-        const elapsed = Math.floor((Date.now() - callStartTime) / 1000);
-        document.getElementById('callTimer').textContent = formatTime(elapsed);
-      }, 1000);
-    }
-
-    function stopTimer() {
-      if (timerInterval) clearInterval(timerInterval);
-    }
-
-    // === Log Call ===
-    async function logCall(status, durationSec = 0) {
-      if (!currentUser || !PEER_EMAIL) return;
-      const chatId = [currentUser.email.toLowerCase(), PEER_EMAIL].sort().join('-');
-      await addDoc(collection(db, 'chats', chatId, 'messages'), {
-        type: 'call_log',
-        callType: 'audio',
-        status,
-        duration: durationSec,
-        sender: currentUser.email,
-        timestamp: serverTimestamp()
-      });
-    }
-
-    // === Create Call Invitation ===
-    async function sendCallInvitation() {
-      if (!PEER_EMAIL) return;
-      const callRef = doc(db, 'calls', PEER_EMAIL);
-      await setDoc(callRef, {
-        caller: currentUser.email,
-        callerName: currentUser.displayName || currentUser.email.split('@')[0],
-        type: 'audio',
-        channel: CHANNEL,
-        timestamp: serverTimestamp(),
-        answered: false
-      });
-    }
-
-    // === Clean Up ===
-    async function cleanup() {
-      isCallActive = false;
-      stopTimer();
-      
-      // Remove call doc
-      if (PEER_EMAIL) {
-        await deleteDoc(doc(db, 'calls', PEER_EMAIL));
-      }
-
-      // Stop Agora
-      if (localAudioTrack) {
-        localAudioTrack.stop();
-        localAudioTrack.close();
-      }
-      if (client) {
-        await client.leave();
-      }
-    }
-
-    // === Start Agora Call ===
-    async function initAgora() {
-      if (typeof AgoraRTC === 'undefined') {
-        setTimeout(initAgora, 200);
-        return;
-      }
-
-      try {
-        client = AgoraRTC.createClient({ mode: "rtc", codec: "vp8" });
-        await client.join(AGORA_APP_ID, CHANNEL, null, null);
-        localAudioTrack = await AgoraRTC.createMicrophoneAudioTrack();
-        await client.publish([localAudioTrack]);
-
-        // Listen for peer answer (optional enhancement)
-        client.on("user-published", async (user, mediaType) => {
-          if (mediaType === "audio") {
-            await client.subscribe(user, mediaType);
-          }
-        });
-
-        isCallActive = true;
-        document.getElementById('callStatus').textContent = 'Connected';
-        startTimer();
-
-      } catch (err) {
-        console.error("Agora init error:", err);
-        cleanup();
-        alert("Call failed to connect.");
-        window.history.back();
-      }
-    }
-
-    // === End Call ===
-    async function endCall() {
-      if (!isCallActive) {
-        window.history.back();
-        return;
-      }
-      const duration = callStartTime ? Math.floor((Date.now() - callStartTime) / 1000) : 0;
-      await logCall('answered', duration);
-      await cleanup();
-      window.history.back();
-    }
-
-    // === Buttons ===
-    document.getElementById('endCallBtn').onclick = endCall;
-    document.getElementById('micBtn').onclick = () => {
-      if (!localAudioTrack) return;
-      const isMuted = localAudioTrack.getVolume() === 0;
-      localAudioTrack.setVolume(isMuted ? 100 : 0);
-      document.getElementById('micBtn').innerHTML = isMuted ? 
-        '<i class="fas fa-microphone"></i>' : 
-        '<i class="fas fa-microphone-slash"></i>';
-    };
-
-    // === Auth & Start ===
-    onAuthStateChanged(auth, async (user) => {
-      if (!user || !PEER_EMAIL) {
-        window.location.href = 'friends.html';
-        return;
-      }
-      currentUser = user;
-
-      try {
-        await sendCallInvitation();
-        await initAgora();
-      } catch (err) {
-        console.error("Call setup error:", err);
-        alert("Could not start call.");
-        window.history.back();
-      }
-    });
-
-    // Cleanup on leave
-    window.addEventListener('beforeunload', async () => {
-      await endCall();
-    });
+  <script>
+    // Retrieve username from localStorage (set during sign-up or login)
+    const savedUsername = localStorage.getItem('username') || 'user';
+    document.getElementById('username').textContent = savedUsername;
   </script>
 </body>
 </html>
